Fix vertical stretching

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ button {
 }
 
 .container {
-	max-height: 98vh;
+	height: 98vh;
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
